# seqrush

./: *Messages*  .gitignore  .gitmodules  .test_small.bps  ACD6.subgraph.1.paf  ACD6.subgraph.fa.gz.fai  ACD6.subgraph.fa.gz.gzi  AGENTS.md  ALGORITHM_COMPARISON.md  ALLWAVE_LIB.md  ANALYSIS_SEQWISH_PARITY.md  CLAUDE.md  Cargo.toml  DEBUG_PAF_PARSING.md  DESIGN.md  FINDINGS_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  README.md  REVERSE_COMPLEMENT_ISSUE.md  SEQWISH_ALGORITHM.md  SWEEP GA_STATUS.md  SWEEPGA_INTEGRATION.md  TOPOLOGICAL_SORT_ANALYSIS.md  UNCHOP_ALGORITHM.md  a3105.paf  allwave_test.paf  analyze_edge_distances.py  analyze_edge_spans.py  analyze_edges.py  apply_ygs_sort.sh  b.1.sorted.paf  b.paf  b.seqrush.paf  b3106.paf  b3106_allwave.paf  b3106_seqrush.paf  b_allwave.paf  b_correct.paf  b_debug.paf  (+206 more)
.cargo_home/: .global-cache
.cargo_home/registry/cache/index.crates.io-1949cf8c6b5b557f/: ab_glyph-0.2.30.crate  ab_glyph_rasterizer-0.1.9.crate  accesskit-0.12.3.crate  accesskit-0.14.0.crate  accesskit_winit-0.20.4.crate  ahash-0.4.7.crate  aligned-vec-0.5.0.crate  alsa-0.7.1.crate  alsa-0.9.1.crate  anstyle-query-1.0.3.crate  arboard-3.4.1.crate  arc-swap-1.7.1.crate  assert_fs-1.1.3.crate  async-broadcast-0.5.1.crate  async-executor-1.13.1.crate  async-io-2.4.0.crate  async-process-2.3.0.crate  async-signal-0.2.10.crate  atomic-0.6.0.crate  atools-0.1.4.crate  avian2d-0.1.2.crate  avian_derive-0.1.0.crate  avif-serialize-0.8.3.crate  avif-serialize-0.8.5.crate  bevy-0.14.2.crate  bevy-inspector-egui-0.27.0.crate  bevy-inspector-egui-derive-0.27.0.crate  bevy_a11y-0.14.2.crate  bevy_app-0.14.2.crate  bevy_asset-0.14.2.crate  bevy_asset_macros-0.14.2.crate  bevy_color-0.14.3.crate  bevy_core-0.14.2.crate  bevy_core_pipeline-0.14.2.crate  bevy_derive-0.14.2.crate  bevy_dev_tools-0.14.2.crate  bevy_diagnostic-0.14.2.crate  bevy_ecs-0.14.2.crate  bevy_ecs_macros-0.14.2.crate  bevy_egui-0.30.1.crate  (+496 more)
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/alsa-0.7.1/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/bgzip-0.3.1/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/bindgen-0.55.1/: Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/bio-1.6.0/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/bio-types-1.0.4/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/boomphf-0.5.9/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/boomphf-0.6.0/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/btoi-0.4.3/: .cargo_vcs_info.json
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/cc-1.2.35/: .cargo_vcs_info.json
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/coitrees-0.4.0/: .cargo_vcs_info.json
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/core_affinity-0.8.3/: .cargo_vcs_info.json
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/cpu-time-1.0.0/: .cargo_vcs_info.json
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/cxx-build-1.0.175/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/derive-new-0.5.9/: .cargo_vcs_info.json
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/editdistancek-1.0.2/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/edlib_rs-0.1.2/: .cargo_vcs_info.json  Cargo.toml
.cargo_home/registry/src/index.crates.io-1949cf8c6b5b557f/fasteval-0.2.4/: .cargo_vcs_info.json  (+1 more)
.codex/: packages.txt
.github/workflows/: ci.yml  test.yml
HLA_graphs_sorted/: index.html
doc/: ALGORITHM_COMPARISON.md  HOW_SEQWISH_WORKS.md  SEQRUSH_IMPLEMENTATION_ISSUES.md
docs/: compaction_algorithm.md  povu_guided_sorting.md  sgd_rc_fix.md  sgd_reverse_handle_bug.md  sweepga_integration.md
seqwish-18HrbX/: 3aVSHJ.sqq  y5NrcK.sqa
seqwish-3WQkTA/: lx6xom.sqa
seqwish-J1x6ij/: MHhN9D.sqa
seqwish-WRKOHk/: 9Tbw0P.sqq  InZ8xP.sqi
seqwish-XZVsxc/: 4oJZc1.sqi  YeFmo5.sqa
seqwish-XwWxu8/: qjcrUW.sqa
seqwish-a07ZTV/: 7FRyVR.sqi  TnBVSG.sqq
seqwish-laGNqA/: b6LN8j.sqa
seqwish-onpunV/: UIK21v.sqi  jmHZwk.sqq
seqwish-p2egJC/: vg3VVN.sqa
src/: AGENTS.md  aligner.rs  bidirected_builder.rs  bidirected_compaction.rs  bidirected_gfa_writer.rs  bidirected_graph.rs  bidirected_ops.rs  bidirected_tests.rs  bidirected_unchop.rs  bidirected_union_find.rs  cigar_analysis.rs  cli.rs  compaction_tests.rs  embedded_builder.rs  embedded_graph.rs  graph_compaction.rs  graph_ops.rs  groom.rs  handlegraph_builder.rs  handlegraph_builder_v2.rs  handlegraph_unchop.rs  handlegraph_unchop_proper.rs  handlegraph_unchop_v2.rs  inversion_aware_seqrush.rs  lib.rs  linear_sgd.rs  main.rs  odgi_topological_sort.rs  odgi_topological_sort_hashgraph.rs  path_sgd.rs  path_sgd_exact.rs  pos.rs  range_builder.rs  reverse_complement_tests.rs  seqrush.rs  seqrush.rs.backup  seqrush_bidirected.rs  seqrush_bidirected_simplified.rs  seqrush_clean.rs  seqwish_style.rs  (+7 more)
src/aligner/: allwave_impl.rs  sweepga_impl.rs
src/legacy/: main_old.rs  main_v2.rs
tests/: AGENTS.md  bidirected_inversion_test.rs  bidirected_tests.rs  integration_tests.rs  mathematical_bidirected_tests.rs  seqwish_parity_tests.rs  test_cigar_validity.rs  test_compaction.rs  test_complex_structural_variations.rs  test_edge_traversal.rs  test_embedded_graph.rs  test_embedded_graph_advanced.rs  test_exact_odgi_sort.rs.disabled  test_graph_construction.rs  test_inversion_detection.rs  test_mathematical_correctness.rs  test_programmatic_variations.rs  test_rc_alignment_integration2.rs  test_rc_node_grouping.rs  test_real_inversion.rs  test_sgd_initialization_problem.rs  test_sgd_perfect_sort.rs  test_sgd_real_b3106_pattern.rs  test_sgd_simple_rc.rs  test_topological_sort.rs  test_wfa2_cigar_debug.rs  test_wfa2_perspective.rs  test_ygs_actual_quality.rs  test_ygs_pipeline_with_bad_init.rs
tests/common/: mod.rs
(+984 files in other folders)
