[package]
name = "seqrush"
version = "0.4.0"
edition = "2021"
authors = ["Kristopher Kubicki <478212+KristopherKubicki@users.noreply.github.com>"]
description = "Lock-free parallel pangenome graph construction"
repository = "https://github.com/KristopherKubicki/seqrush"
license = "MIT"
keywords = ["bioinformatics", "pangenome", "graph", "alignment", "parallel"]
categories = ["science", "command-line-utilities"]
autobins = false

[lib]
name = "seqrush"
path = "src/lib.rs"

[[bin]]
name = "seqrush"
path = "src/main.rs"
test = false

[[bin]]
name = "test_embedded_circular"
path = "src/bin/test_embedded_circular.rs"
required-features = ["debug-bins"]
test = false

[[bin]]
name = "debug_embedded_path"
path = "src/bin/debug_embedded_path.rs"
required-features = ["debug-bins"]
test = false

[[bin]]
name = "test_embedded_conversion"
path = "src/bin/test_embedded_conversion.rs"
required-features = ["debug-bins"]
test = false

[[bin]]
name = "debug_embedded_gfa"
path = "src/bin/debug_embedded_gfa.rs"
required-features = ["debug-bins"]
test = false

[[bin]]
name = "test_handlegraph_api"
path = "src/bin/test_handlegraph_api.rs"
required-features = ["debug-bins"]
test = false

[[bin]]
name = "test_handlegraph_traits"
path = "src/bin/test_handlegraph_traits.rs"
required-features = ["debug-bins"]
test = false

[features]
debug-bins = []

[dependencies]
# Use local path dependencies to avoid network fetch during tests
allwave = { path = "allwave" }
lib_wfa2 = { git = "https://github.com/ekg/lib_wfa2", rev = "819b82cd842aabedcb962fd5b82380fe454234f6" }
union-find = "0.3"
uf_rush = "0.2"
rayon = "1.7"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_xoshiro = "0.6"
bitvec = "1.0"
sha2 = "0.10"
handlegraph = "0.7.0-alpha.9"

[dev-dependencies]
tempfile = "3"
